syntax="proto3";package go.coffeeshop.proto.orderapi;import "google/api/annotations.proto";import "protoc-gen-openapiv2/options/annotations.proto";import "google/protobuf/timestamp.proto";import "common.proto";option go_package = "github.com/thangchung/go-coffeeshop/proto/gen";service OrderService {    rpc GetListDeleteOrders(GetListDeleteOrdersRequest) returns (GetListOrderDeleteResponse) {        option (google.api.http) = {            get: "/v1/api/delete-orders"        };        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {            summary: "List order delete"            description: "List order delete on the server."            tags: "Orders"        };    }}message GetListDeleteOrdersRequest {}message GetListOrderDeleteResponse {  repeated OrderDto orders = 1;}message OrderDto {    string id = 1;    string order_num = 2;    string order_status = 3;    repeated ProductDto products = 4;    repeated UserDto users = 5;}message ProductDto {    string id = 1;    string sku = 2;    string name = 3;    double price = 4;}message UserDto {    string id = 1;    string name = 2;    string telephone = 3;}